create page router

--- a/client/src/style/styleMain.scss
+++ b/client/src/style/styleMain.scss
@@ -86,6 +86,8 @@ body {
 @import "./style-book-tickets/styleBookTickets";
 @import "./style-booking-history-tickets/styleBookingHistoryTickets";
 
+@import "./style-cinemas/styleCinemas";
+
 @import "./style-modalMovies/styleModalMovies";
 
 @import "./style-authentication/styleAuthentication";
